--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <main>
       <header>
         <h1>Furniture Emporium</h1>
-        <p >
+        <p class="nav">
           Browse our collection of bespoke furniture to find the next piece to
           bring home.
         </p>
